fix alignment issue on larger screens

--- a/assets/css/resume.css
+++ b/assets/css/resume.css
@@ -75,6 +75,7 @@ p.lead {
 }
 
 #about {
+  min-width: 100%;
   text-align: center;
 }
 
